feat: added comment for act api methods
- gen swagger spec
